correction navbar z-index

--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -40,6 +40,8 @@ body {
 
     /*Ombre du menu*/
     box-shadow: 0px 2px 3px 1px #2f2f2f;
+
+    z-index: 1;
 }
 
 #burger-menu {
